# Parsec_AstroPi_2022-23

./: .breakpoints  EdgeTPU.py  README.md  README.txt  convmodel.py  createdataset.py  main.py  multiearth.py  ndvi.py  ndwi.py  pyproject.toml  test.py  timer.py
AllFiles/: EdgeTPU.py  README_phase1.txt  convmodel.py  elaborazione.py  findNorth.py  multiearth.py  prova.py  sep.py  timer.py
Phase_1-3/: README.md
Phase_4/: README.md  correlation.py  createdataset.py  genetictraining.py  multiearth.py  sarima.py
Pictures/: README.md
